[package]
name = "cadenza-lock"
authors = ["municorn <municorn@musicaloft.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
log = "0.4"
pam = "0.7"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit", default-features = false, features = ["calloop"] }
users = "0.11"
